EDU-1440 Bonus commit: fix overflow issue of video preview on small screens

--- a/src/components/resource-selector/shared/resource-preview.less
+++ b/src/components/resource-selector/shared/resource-preview.less
@@ -11,6 +11,10 @@
     height: 100%;
   }
 
+  &.ResourcePreview--video {
+    height: auto;
+  }
+
   &.ResourcePreview--fullWidth {
     display: block;
     width: 100%;
